# indico-plugin-vc-simple

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
example_redirector/: simple.py
indico_vc_simple/: bbb_redirector.py  plugin.py  redirector.py  simple.py
indico_vc_simple/templates/: buttons.html  event_buttons.html  info_box.html  manage_event_create_room.html  manage_event_info_box.html  vc_room_timetable_buttons.html
